--- a/src/components/navbar/myNavbar.css
+++ b/src/components/navbar/myNavbar.css
@@ -1,7 +1,7 @@
 .top_border {
   border-top-style: solid;
   border-width: 2px;
-  border-color: blueviolet;
+  border-color: #154FFF;
   width: 100%;
 }
 
@@ -32,7 +32,7 @@ li {
 }
 
 i:hover {
-  color: blueviolet;
+  color: #154FFF;
 }
 
 .menu_link {
@@ -40,7 +40,7 @@ i:hover {
 }
 
 .menu_link:hover {
-  color: blueviolet;
+  color: #154FFF;
 }
 
 @media (max-width: 630px) {
